--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "realtime_chat",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node server/index.js",
+    "dev": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
